Gave the schedule and results a background color when active. Also fixed the z-index so the links are clickable.

--- a/sass/partials/_athletics.scss
+++ b/sass/partials/_athletics.scss
@@ -283,6 +283,7 @@
     position: absolute;
     top: 561px;
     width: calc(100% - 294px);
+    z-index: 10;
 
     ul {
       display: inline-block;
@@ -306,6 +307,10 @@
 
     #athletics-schedule-results {
       position: relative;
+
+      .active {
+        background-color: #FFFFFF;
+      }
 
       ul {
         background-color: #ffd457;
